--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,25 @@ dependencies {
 
     compile 'com.natpryce:konfig:1.6.1.0'
 
+    // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.0.4.RELEASE'
+
+    //https://dzone.com/articles/jdbi-a-nice-spring-jdbc-alternative
+
+    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
+
+    compile 'org.jdbi:jdbi3-bom:3.0.1'
+    compile 'org.jdbi:jdbi3-kotlin:3.0.1'
+    compile 'org.jdbi:jdbi3-kotlin-sqlobject:3.0.1'
+    compile 'org.jdbi:jdbi3-sqlobject:3.0.1'
+    compile 'org.jdbi:jdbi3-postgres:3.0.1'
+
+    compile group: 'com.h2database', name: 'h2', version: '1.4.196'
+
+    // https://mvnrepository.com/artifact/com.h2database/h2
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.196'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
